# xplane-webapi

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENTS.md  BACKLOG.md  FDR Example Version 4.fdr  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.codex/plugins/superpowers/: PROJECT-INSTALL.md
.codex/skills/code-quality/: SKILL.md
.codex/skills/finishing-a-development-branch/: SKILL.md
.codex/skills/git-sync/: SKILL.md
.codex/skills/hygiene/: SKILL.md
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md  review-1318e69..00fb94c.diff  review-1318e69..4ced326.diff  review-1668387..a86baed-final-fix.diff  review-283379a..222a568.diff  review-283379a..afab0b9.diff  review-4ced326..d0df027.diff  review-61e4b42..15c8945.diff  review-61e4b42..db21c3a.diff  review-70d78cb..1668387.diff  review-9868303..1668387-final.diff  review-afab0b9..70d78cb.diff  review-d0df027..61e4b42.diff  review-db21c3a..283379a.diff  task-1-brief.md  task-1-report.md  task-1-review.diff  task-2-brief.md  task-2-report.md  task-2-review.diff  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md
changelog/: index.html
docs/reference/: async-rest.md  beacon.md  core-api.md  exceptions.md  index.md  logging.md  package.md  rest.md  udp.md  websocket.md
docs/superpowers/plans/: 2026-06-19-async-rest-api.md  2026-06-19-p0-tranche.md  2026-06-19-typed-cache.md  2026-06-20-custom-exception-hierarchy.md  2026-06-20-p0-unittest-coverage.md  2026-06-21-ci-cd-pipeline.md  2026-06-21-documentation-improvements.md  2026-06-21-structured-logging.md  2026-06-21-websocket-library-migration.md  2026-07-19-strong-hygiene-and-dependency-maintenance.md
docs/superpowers/specs/: 2026-06-19-async-rest-api-design.md  2026-06-19-p0-tranche-design.md  2026-06-19-typed-cache-design.md  2026-06-20-custom-exception-hierarchy-design.md  2026-06-20-xplane-webapi-vnext-product-design.md  2026-06-21-ci-cd-pipeline-design.md  2026-06-21-documentation-improvements-design.md  2026-06-21-structured-logging-design.md  2026-06-21-websocket-library-migration-design.md  2026-07-19-strong-hygiene-and-dependency-maintenance-design.md
docs/usage/: index.md
examples/: fdr.py  geoutil.py  oooi.py  posreport.py  simple_beacon.py  simple_monitor.py  simple_upd.py  simple_ws.py  template.py  unitutil.py  xgs.py  xpwsapp.py
reference/: index.html
reference/async-rest/: index.html
reference/beacon/: index.html
reference/core-api/: index.html
reference/exceptions/: index.html
reference/logging/: index.html
reference/package/: index.html
reference/rest/: index.html
reference/udp/: index.html
reference/websocket/: index.html
search/: search_index.json
superpowers/plans/2026-06-19-async-rest-api/: index.html
superpowers/plans/2026-06-19-p0-tranche/: index.html
superpowers/plans/2026-06-19-typed-cache/: index.html
superpowers/plans/2026-06-20-custom-exception-hierarchy/: index.html
superpowers/plans/2026-06-20-p0-unittest-coverage/: index.html
tests/: __init__.py  helpers.py  test_api.py  test_async_rest.py  test_beacon.py  test_documentation.py  test_exceptions.py  test_logging_config.py  test_quality_tool.py  test_rest.py  test_type_annotations.py  test_udp.py  test_ws.py
tools/: quality.py
usage/: index.html
xpwebapi/: __init__.py  api.py  async_rest.py  beacon.py  exceptions.py  logging_config.py  rest.py  retry.py  udp.py  ws.py
(+20 files in other folders)
