[project]
name = "xpwebapi"
version = "3.5.0"
authors = [
  { name="Pierre M.", email="pierre@devleaks.be" }
]
description = "Python Wrapper for Laminar Research X-Plane Web API"
readme = "README.md"
license = {file = "LICENCE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.12"
dependencies = [
    "ifaddr~=0.2",
    "natsort~=8.4",
    "packaging~=25.0",
    "httpx~=0.28",
    "simple-websocket~=1.1",
]

[project.urls]
Homepage = "https://devleaks.github.io/xplane-webapi/"
Documentation = "https://devleaks.github.io/xplane-webapi/"
Issues = "https://github.com/devleaks/xplane-webapi/issues"
Source = "https://github.com/devleaks/xplane-webapi"

[dependency-groups]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 160
extend-exclude = ["examples"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.src]
exclude = ["examples/**"]

[tool.ty.rules]
all = "error"
