[project]
name = "xpwebapi"
version = "3.5.0"
authors = [
  { name="Pierre M.", email="pierre@devleaks.be" }
]
description = "Python Wrapper for Laminar Research X-Plane Web API"
readme = "README.md"
license = {file = "LICENCE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "ifaddr~=0.2",
    "natsort~=8.4",
    "packaging~=25.0",
    "httpx~=0.28",
    "simple-websocket~=1.1",
]

[project.urls]
Homepage = "https://devleaks.github.io/xplane-webapi/"
Documentation = "https://devleaks.github.io/xplane-webapi/"
Issues = "https://github.com/devleaks/xplane-webapi/issues"
Source = "https://github.com/devleaks/xplane-webapi"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "cohesion>=1.2.0",
    "coverage>=7.14.1",
    "detect-secrets>=1.5.0",
    "interrogate>=1.7.0",
    "lizard>=1.23.0",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "pre-commit>=4.5.1",
    "ruff>=0.15.17",
    "ty>=0.0.49",
    "vulture>=2.16",
    "wily>=1.12.2",
    "xenon>=0.9.3",
]

[tool.coverage.run]
source = ["xpwebapi"]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 160
extend-exclude = ["examples"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.src]
exclude = ["examples/**"]

[tool.ty.rules]
all = "error"
# Current code predates strict annotation-modernization requirements.
# Keep ty blocking on compatibility errors while leaving these broad cleanup
# classes for separate focused work.
missing-override-decorator = "ignore"
missing-type-argument = "ignore"
unresolved-attribute = "ignore"
